rules: make checkGeometrySafe actually safe

If the window rule's position was outside of every screen, it before returned
a rectangle that's at INT_MIN, causing the window to disappear and even
triggering asserts when that geometry was used in some calculations.

BUG: 466119